[gd_scene load_steps=16 format=3 uid="uid://cpcu7ch4unf3j"]

[ext_resource type="Texture2D" uid="uid://cq22yaw1lcm53" path="res://sprites/forklift.png" id="1_f7ft4"]
[ext_resource type="Script" path="res://forklift.gd" id="1_mjbq8"]
[ext_resource type="Texture2D" uid="uid://2wraqkilc180" path="res://sprites/metal1.png" id="1_rh7lq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hlor2"]
albedo_texture = ExtResource("1_f7ft4")
uv1_scale = Vector3(4, 4, 4)

[sub_resource type="BoxMesh" id="BoxMesh_fqx5o"]
material = SubResource("StandardMaterial3D_hlor2")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_17bb7"]
albedo_texture = ExtResource("1_rh7lq")

[sub_resource type="BoxMesh" id="BoxMesh_2q7sx"]
material = SubResource("StandardMaterial3D_17bb7")

[sub_resource type="BoxShape3D" id="BoxShape3D_1lq34"]
size = Vector3(1.55377, 1, 4.20923)

[sub_resource type="BoxShape3D" id="BoxShape3D_oba18"]
size = Vector3(0.473633, 0.197144, 1.91205)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_luxq2"]
albedo_texture = ExtResource("1_rh7lq")

[sub_resource type="BoxMesh" id="BoxMesh_to4we"]
material = SubResource("StandardMaterial3D_luxq2")

[sub_resource type="BoxShape3D" id="BoxShape3D_xk5h4"]
size = Vector3(1, 1.2251, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ajw0y"]
albedo_texture = ExtResource("1_rh7lq")

[sub_resource type="BoxMesh" id="BoxMesh_xl3ea"]
material = SubResource("StandardMaterial3D_ajw0y")

[sub_resource type="BoxShape3D" id="BoxShape3D_iaq7b"]
size = Vector3(1, 1.22058, 1)

[node name="Forklift" type="StaticBody3D"]
script = ExtResource("1_mjbq8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1.55617, 0, 0, 0, 1, 0, 0, 0, 4.2173, 0, 0, 0)
mesh = SubResource("BoxMesh_fqx5o")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.479552, 0, 0, 0, 0.195985, 0, 0, 0, 2.11177, -0.379306, -0.302883, 2.96407)
mesh = SubResource("BoxMesh_2q7sx")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(0.479552, 0, 0, 0, 0.195985, 0, 0, 0, 2.11177, 0.406908, -0.302883, 2.96407)
mesh = SubResource("BoxMesh_2q7sx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00234985, 0, -0.0020752)
shape = SubResource("BoxShape3D_1lq34")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.377753, -0.302185, 3.06661)
shape = SubResource("BoxShape3D_oba18")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.403455, -0.302185, 3.06661)
shape = SubResource("BoxShape3D_oba18")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.144719, 1.28806)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
mesh = SubResource("BoxMesh_to4we")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.112549, 0)
shape = SubResource("BoxShape3D_xk5h4")

[node name="Area3D2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.145503, -1.3177)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D2"]
mesh = SubResource("BoxMesh_xl3ea")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.110291, 0)
shape = SubResource("BoxShape3D_iaq7b")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="Area3D2" to="." method="_on_area_3d_2_body_entered"]
[connection signal="body_exited" from="Area3D2" to="." method="_on_area_3d_2_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
